--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,9 @@ body {
   touch-action: pan-y, pan-x;
   transition: all 0.4s cubic-bezier(0.57, 0.25, 0.33, 1) 0s;
 }
+
+.container {
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+}
