--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,33 @@ body {
   margin: auto;
   overflow: hidden;
 }
+
+@media (min-width: 2100px) {
+  .container{
+    max-width: 1600px;
+  }
+}
+
+@media (min-width: 576px) {
+  .container{
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container{
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container{
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container{
+    max-width: 1200px;
+  }
+}
