--- a/src/utils/components/Navbar/Navbar.css
+++ b/src/utils/components/Navbar/Navbar.css
@@ -90,6 +90,7 @@
         display: flex;
         background-color: var(--primary-color);
         flex-direction: column;
+        transform: translateX(-150%);
         width: 100%;
         font-size: 1.2rem;
         z-index: 999;
