--- a/src/utils/components/Hero/Hero.css
+++ b/src/utils/components/Hero/Hero.css
@@ -21,7 +21,7 @@
 }
 
 .h-right{
-    flex: 1;
+    flex: 1.25;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -34,6 +34,15 @@
     color: var(--third-color);
     font-size: 4rem;
     font-weight: bold;
+    text-transform: uppercase;
+}
 
+.h-title > :nth-child(3){
+    color: white;
+}
 
+.h-desc {
+    color: white;
+    font-size: 1.4rem;
+    line-height: 2rem;
 }
