add styles on arrow

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,6 +8,15 @@
     padding-top: 8rem;
 }
 
+/*hidden arrow */
+.h-arrow {
+    position: absolute;
+    top: 5rem;
+    width: 100%;
+    max-width: 60rem;
+    z-index: 0;
+}
+
 .h-container{
     display: flex;
     height: 80vh;
