--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -95,3 +95,23 @@
     font-size: 1.4rem;
     line-height: 2rem;
 }
+
+/* responsive for different screens*/
+@media (max-width: 1024px) {
+    .h-wrapper{
+        height: max-content;
+    }
+
+    .h-wrapper .container{
+        padding-top: 5rem;
+    }
+
+    .h-container {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        gap: 4rem;
+        padding-top: 3rem;
+        
+    }
+}
