--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -112,6 +112,26 @@
         align-items: center;
         gap: 4rem;
         padding-top: 3rem;
-        
     }
+
+    .h-arrow {
+        display: none;
+    }
+
+    .h-right {
+        flex: 1;
+        align-items: center;
+    }
+
+    .h-title {
+        align-items: center;
+        font-size: 2.2rem;
+    }
+
+    .h-desc {
+        font-size: 1.2rem;
+        width: 80%;
+        text-align: center;
+    }
+
 }
