--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -111,7 +111,7 @@
         flex-direction: column;
         align-items: center;
         gap: 4rem;
-        padding-top: 3rem;
+        padding-bottom: 3rem;
     }
 
     .h-arrow {
