--- a/src/components/Whatwedo/Whatwedo.css
+++ b/src/components/Whatwedo/Whatwedo.css
@@ -55,9 +55,76 @@
     border: 1px solid hsla(0, 0%, 59%, 0.17);
     border-radius: 1rem;
     padding: 1rem;
+
     color: var(--title-color);
     font-size: 1.1rem;
     line-height: 1.6rem;
     font-weight: 500;
 
+    height: fit-content;
+
+}
+
+.wwd-block:nth-child(1) >.block-features >:nth-child(2) {
+    margin-top: 3rem;
+}
+
+.wwd-block:nth-of-type(2) >.block-features >:nth-child(1),
+.wwd-block:nth-of-type(2) >.block-features >:nth-child(3) {
+    margin-top: 2rem;
+}
+
+/* sponsoring */
+.wwd-support {
+    display: flex;
+    padding: 2rem;
+    box-shadow: var(--shadow);
+    border-radius: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2.5rem;
+    background: white;
+}
+
+.wwd-support > div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.wwd-support > :nth-child(1){
+    flex: 1;
+}
+
+.wwd-support > :nth-child(2){
+    flex: 1.6;
+}
+
+/*responsive */
+@media (max-width: 990px){
+    .wwd-blocks {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 768px){
+    .wwd-support {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 576px) {
+    .wwd-block {
+        width: 80%;
+        margin: auto;
+    }
+
+    .block-features {
+        flex-direction: column;
+    }
+
+    .block-feature {
+        margin-top: 0rem !important;
+    }
 }
