--- a/src/components/OurDifference/OurDifference.css
+++ b/src/components/OurDifference/OurDifference.css
@@ -24,3 +24,22 @@
     text-align: center;
     max-width: 65%;
 }
+
+/* features part */
+.od-features {
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 10rem;
+}
+
+.od-feature {
+    flex: 1;
+    background-color: white;
+    box-shadow: var(--shadow);
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 1rem;
+    
+}
